# tabpi

./: .gitignore  CLAUDE.md  README.md  TabPFN_Libero.py  liberRandomMatt.py  liberoRandom.py  main.py  pixi.toml  pyproject.toml  ruff.toml
docs/: DESIGN.md
experiments/: TabPFN_Libero.py  cartpole_baseline.py  libero_policy.py
scripts/: cartpole.py  hello-wandb.py  liberoRandom.py  libero_random.py  test_vecenv.py
src/tabpi/: __init__.py  config.py  data.py  eval.py  train.py  wab.py
src/tabpi/envs/: base.py  cartpole.py  libero.py
src/tabpi/models/: base.py  tabpfn_policy.py
src/tabpi/utils/: deco.py  util.py
tests/: conftest.py
tests/integration/: test_libero.py
tests/unit/: test_wab.py
utils/: util.py
wandb/: latest-run
wandb/run-20260204_234150-2s9eh1pi/: run-2s9eh1pi.wandb
wandb/run-20260204_234150-2s9eh1pi/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20260205_003158-eyixp8i0/: run-eyixp8i0.wandb
wandb/run-20260205_003158-eyixp8i0/files/: config.yaml  wandb-metadata.json
wandb/run-20260205_004318-pubrwd59/: run-pubrwd59.wandb
wandb/run-20260205_004318-pubrwd59/files/: config.yaml  wandb-metadata.json
wandb/run-20260205_004518-p2ra89z7/: run-p2ra89z7.wandb
wandb/run-20260205_004518-p2ra89z7/files/: config.yaml  wandb-metadata.json
wandb/run-20260205_005638-ajordmls/: run-ajordmls.wandb
wandb/run-20260205_005638-ajordmls/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20260205_010037-ld51cp7p/: run-ld51cp7p.wandb
wandb/run-20260205_010037-ld51cp7p/files/: config.yaml  (+3 more)
