[build-system]
requires = ["uv_build>=0.9.15"]
build-backend = "uv_build"

[project]
name = "tabpi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gym>=0.26.2",
    "gymnasium[classic-control]>=1.2.3",
    "huggingface>=0.0.1",
    "il-datasets>=0.6.1",
    "imageio>=2.37.2",
    "imageio-ffmpeg>=0.6.0",
    "jax>=0.9.0",
    "libero>=0.1.1",
    "numpy==2.3.5",
    "rich>=14.2.0",
    "robosuite>=1.4.0",
    "scikit-learn>=1.7.2",
    "tabpfn>=6.2.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
    "tyro>=1.0.3",
    "wandb>=0.24.0",
]
